--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
   <input class="cambiar-categoria" type="radio" id="Alcalinos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="alkaline-earth-metals" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Alcalino-Térreos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="lanthanoids" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
@@ -10924,7 +10924,7 @@
     <div class="key">
       <div class="row">
         <label class="alkali-metal" for="Alcalinos">Alcalinos</label>
-        <label class="alkaline-earth-metal" for="alkaline-earth-metals">Alcalino-Térreos</label>
+        <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
         <label class="lanthanoid" for="lanthanoids">Lantánidos</label>
         <label class="actinoid" for="actinoids">Actínidos</label>
         <label class="transition-metal" for="transition-metals">Metales de Transición</label>
