--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="Alcalino-Térreos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="lanthanoids" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Lantánidos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="actinoids" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Actínidos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="transition-metals" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="post-transition-metals" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Otros-Metales" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="metalloids" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
@@ -10925,10 +10925,10 @@
       <div class="row">
         <label class="alkali-metal" for="Alcalinos">Alcalinos</label>
         <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
-        <label class="lanthanoid" for="lanthanoids">Lantánidos</label>
-        <label class="actinoid" for="actinoids">Actínidos</label>
+        <label class="lanthanoid" for="Lantánidos">Lantánidos</label>
+        <label class="actinoid" for="Actínidos">Actínidos</label>
         <label class="transition-metal" for="transition-metals">Metales de Transición</label>
-        <label class="post-transition-metal" for="post-transition-metals">Otros Metales</label>
+        <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
         <label class="metalloid" for="metalloids">Metaloides</label>
         <label class="other-nonmetal" for="other-nonmetals">Otros no Metales</label>
         <label class="unknown" for="unknown">Halógenos</label>
