--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r1">
+    <div class="elemento GasNoble c18 r1">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -126,7 +126,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c13 r2">
+    <div class="elemento Metaloide c13 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -276,7 +276,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r2">
+    <div class="elemento GasNoble c18 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -423,7 +423,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c14 r3">
+    <div class="elemento Metaloide c14 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -589,7 +589,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r3">
+    <div class="elemento GasNoble c18 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1335,7 +1335,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c14 r4">
+    <div class="elemento Metaloide c14 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1396,7 +1396,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c15 r4">
+    <div class="elemento Metaloide c15 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1585,7 +1585,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r4">
+    <div class="elemento GasNoble c18 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2704,7 +2704,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c15 r5">
+    <div class="elemento Metaloide c15 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2787,7 +2787,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c16 r5">
+    <div class="elemento Metaloide c16 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2956,7 +2956,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r5">
+    <div class="elemento GasNoble c18 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6177,7 +6177,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento metalloid c17 r6">
+    <div class="elemento Metaloide c17 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6297,7 +6297,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r6">
+    <div class="elemento GasNoble c18 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10929,10 +10929,10 @@
         <label class="actinoid" for="Actínidos">Actínidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
-        <label class="metalloid" for="Metaloides">Metaloides</label>
+        <label class="Metaloide" for="Metaloides">Metaloides</label>
         <label class="other-nonmetal" for="Otros-no-Metales">Otros no Metales</label>
         <label class="Halógeno" for="Halógenos">Halógenos</label>
-        <label class="Gas-Noble" for="Gases-Nobles">Gases Nobles</label>
+        <label class="GasNoble" for="Gases-Nobles">Gases Nobles</label>
         
       </div>
     </div>
