--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <input class="cambiar-categoria" type="radio" id="Halógenos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <div class="periodic-table">
-    <div class="elemento other-nonmetal c1 r1">
+    <div class="elemento Otro-no-Metal c1 r1">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -154,7 +154,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c14 r2">
+    <div class="elemento Otro-no-Metal c14 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -183,7 +183,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c15 r2">
+    <div class="elemento Otro-no-Metal c15 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -213,7 +213,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c16 r2">
+    <div class="elemento Otro-no-Metal c16 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -244,7 +244,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c17 r2">
+    <div class="elemento Otro-no-Metal c17 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -463,7 +463,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c15 r3">
+    <div class="elemento Otro-no-Metal c15 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -504,7 +504,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c16 r3">
+    <div class="elemento Otro-no-Metal c16 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -546,7 +546,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c17 r3">
+    <div class="elemento Otro-no-Metal c17 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1458,7 +1458,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c16 r4">
+    <div class="elemento Otro-no-Metal c16 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1521,7 +1521,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c17 r4">
+    <div class="elemento Otro-no-Metal c17 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2871,7 +2871,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento other-nonmetal c17 r5">
+    <div class="elemento Otro-no-Metal c17 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10930,7 +10930,7 @@
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
         <label class="Metaloide" for="Metaloides">Metaloides</label>
-        <label class="other-nonmetal" for="Otros-no-Metales">Otros no Metales</label>
+        <label class="Otro-no-Metal" for="Otros-no-Metales">Otros no Metales</label>
         <label class="Halógeno" for="Halógenos">Halógenos</label>
         <label class="GasNoble" for="Gases-Nobles">Gases Nobles</label>
         
