--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="Gases-Nobles" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="Halógenos" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Halogenos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <div class="periodic-table">
     <div class="elemento Otro-no-Metal c1 r1">
@@ -9399,7 +9399,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c9 r7">
+    <div class="elemento Halogeno c9 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -9546,7 +9546,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c10 r7">
+    <div class="elemento Halogeno c10 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -9694,7 +9694,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c11 r7">
+    <div class="elemento Halogeno c11 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -9993,7 +9993,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c13 r7">
+    <div class="elemento Halogeno c13 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10296,7 +10296,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c15 r7">
+    <div class="elemento Halogeno c15 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10449,7 +10449,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c16 r7">
+    <div class="elemento Halogeno c16 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10603,7 +10603,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c17 r7">
+    <div class="elemento Halogeno c17 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10758,7 +10758,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Halógeno c18 r7">
+    <div class="elemento Halogeno c18 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10931,7 +10931,7 @@
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
         <label class="Metaloide" for="Metaloides">Metaloides</label>
         <label class="Otro-no-Metal" for="Otros-no-Metales">Otros no Metales</label>
-        <label class="Halógeno" for="Halógenos">Halógenos</label>
+        <label class="Halogeno" for="Halogenos">Halogenos</label>
         <label class="GasNoble" for="Gases-Nobles">Gases Nobles</label>
         
       </div>
