--- a/index.html
+++ b/index.html
@@ -6669,7 +6669,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c4 r10">
+    <div class="elemento Actínido c4 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6796,7 +6796,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c5 r10">
+    <div class="elemento Actínido c5 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6924,7 +6924,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c6 r10">
+    <div class="elemento Actínido c6 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7053,7 +7053,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c7 r10">
+    <div class="elemento Actínido c7 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7183,7 +7183,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c8 r10">
+    <div class="elemento Actínido c8 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7314,7 +7314,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c9 r10">
+    <div class="elemento Actínido c9 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7446,7 +7446,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c10 r10">
+    <div class="elemento Actínido c10 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7579,7 +7579,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c11 r10">
+    <div class="elemento Actínido c11 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7713,7 +7713,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c12 r10">
+    <div class="elemento Actínido c12 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7848,7 +7848,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c13 r10">
+    <div class="elemento Actínido c13 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -7984,7 +7984,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c14 r10">
+    <div class="elemento Actínido c14 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -8121,7 +8121,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c15 r10">
+    <div class="elemento Actínido c15 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -8259,7 +8259,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c16 r10">
+    <div class="elemento Actínido c16 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -8398,7 +8398,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c17 r10">
+    <div class="elemento Actínido c17 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -8538,7 +8538,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento actinoid c18 r10">
+    <div class="elemento Actínido c18 r10">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10917,7 +10917,7 @@
     <div class="placeholder lanthanoid c3 r6">
       <div class="cuadrado">57-71</div>
     </div>
-    <div class="placeholder actinoid c3 r7">
+    <div class="placeholder Actínido c3 r7">
       <div class="cuadrado">89-103</div>
     </div>
     <div class="gap c3 r8"></div>
@@ -10926,7 +10926,7 @@
         <label class="alkali-metal" for="Alcalinos">Alcalinos</label>
         <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
         <label class="lanthanoid" for="Lantánidos">Lantánidos</label>
-        <label class="actinoid" for="Actínidos">Actínidos</label>
+        <label class="Actínido" for="Actínidos">Actínidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
         <label class="Metaloide" for="Metaloides">Metaloides</label>
