--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r2">
+    <div class="elemento Alcalino c1 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -309,7 +309,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r3">
+    <div class="elemento Alcalino c1 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -633,7 +633,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r4">
+    <div class="elemento Alcalino c1 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1650,7 +1650,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r5">
+    <div class="elemento Alcalino c1 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3042,7 +3042,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r6">
+    <div class="elemento Alcalino c1 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3223,7 +3223,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c4 r9">
+    <div class="elemento Lantanido c4 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3315,7 +3315,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c5 r9">
+    <div class="elemento Lantanido c5 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3408,7 +3408,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c6 r9">
+    <div class="elemento Lantanido c6 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3502,7 +3502,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c7 r9">
+    <div class="elemento Lantanido c7 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3597,7 +3597,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c8 r9">
+    <div class="elemento Lantanido c8 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3693,7 +3693,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c9 r9">
+    <div class="elemento Lantanido c9 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3790,7 +3790,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c10 r9">
+    <div class="elemento Lantanido c10 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3888,7 +3888,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c11 r9">
+    <div class="elemento Lantanido c11 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -3987,7 +3987,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c12 r9">
+    <div class="elemento Lantanido c12 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4087,7 +4087,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c13 r9">
+    <div class="elemento Lantanido c13 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4188,7 +4188,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c14 r9">
+    <div class="elemento Lantanido c14 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4290,7 +4290,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c15 r9">
+    <div class="elemento Lantanido c15 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4393,7 +4393,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c16 r9">
+    <div class="elemento Lantanido c16 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4497,7 +4497,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c17 r9">
+    <div class="elemento Lantanido c17 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -4602,7 +4602,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento lanthanoid c18 r9">
+    <div class="elemento Lantanido c18 r9">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6418,7 +6418,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento alkali-metal c1 r7">
+    <div class="elemento Alcalino c1 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10914,7 +10914,7 @@
         </ul>
       </div>
     </div>
-    <div class="placeholder lanthanoid c3 r6">
+    <div class="placeholder Lantanido c3 r6">
       <div class="cuadrado">57-71</div>
     </div>
     <div class="placeholder Actinido c3 r7">
@@ -10923,9 +10923,9 @@
     <div class="gap c3 r8"></div>
     <div class="key">
       <div class="row">
-        <label class="alkali-metal" for="Alcalinos">Alcalinos</label>
+        <label class="Alcalino" for="Alcalinos">Alcalinos</label>
         <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
-        <label class="lanthanoid" for="Lantánidos">Lantánidos</label>
+        <label class="Lantanido" for="Lantánidos">Lantánidos</label>
         <label class="Actinido" for="Actinidos">Actinidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
