--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="Alcalino-Térreos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="Lantánidos" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Lantanidos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="Actinidos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
@@ -10925,7 +10925,7 @@
       <div class="row">
         <label class="Alcalino" for="Alcalinos">Alcalinos</label>
         <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
-        <label class="Lantanido" for="Lantánidos">Lantánidos</label>
+        <label class="Lantanido" for="Lantanidos">Lantanidos</label>
         <label class="Actinido" for="Actinidos">Actinidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
         <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
