--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
   <input class="cambiar-categoria" type="radio" id="Alcalinos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
-  <input class="cambiar-categoria" type="radio" id="Alcalino-Térreos" name="categorias"/>
+  <input class="cambiar-categoria" type="radio" id="Alcalino-Terreos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
   <input class="cambiar-categoria" type="radio" id="Lantanidos" name="categorias"/>
   <input class="cancelar-categoria" type="radio" id="cancelar" name="categorias"/>
@@ -384,7 +384,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c13 r3">
+    <div class="elemento Otro-Metal c13 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1275,7 +1275,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c13 r4">
+    <div class="elemento Otro-Metal c13 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2541,7 +2541,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c13 r5">
+    <div class="elemento Otro-Metal c13 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2622,7 +2622,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c14 r5">
+    <div class="elemento Otro-Metal c14 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5707,7 +5707,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c13 r6">
+    <div class="elemento Otro-Metal c13 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5823,7 +5823,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c14 r6">
+    <div class="elemento Otro-Metal c14 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5940,7 +5940,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c15 r6">
+    <div class="elemento Otro-Metal c15 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6058,7 +6058,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c16 r6">
+    <div class="elemento Otro-Metal c16 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10144,7 +10144,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento post-transition-metal c14 r7">
+    <div class="elemento Otro-Metal c14 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10924,11 +10924,11 @@
     <div class="key">
       <div class="row">
         <label class="Alcalino" for="Alcalinos">Alcalinos</label>
-        <label class="alkaline-earth-metal" for="Alcalino-Térreos">Alcalino-Térreos</label>
+        <label class="alkaline-earth-metal" for="Alcalino-Terreos">Alcalino-Térreos</label>
         <label class="Lantanido" for="Lantanidos">Lantanidos</label>
         <label class="Actinido" for="Actinidos">Actinidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
-        <label class="post-transition-metal" for="Otros-Metales">Otros Metales</label>
+        <label class="Otro-Metal" for="Otros-Metales">Otros Metales</label>
         <label class="Metaloide" for="Metaloides">Metaloides</label>
         <label class="Otro-no-Metal" for="Otros-no-Metales">Otros no Metales</label>
         <label class="Halogeno" for="Halogenos">Halogenos</label>
