--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r1">
+    <div class="elemento Gas-Noble c18 r1">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -276,7 +276,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r2">
+    <div class="elemento Gas-Noble c18 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -589,7 +589,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r3">
+    <div class="elemento Gas-Noble c18 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1585,7 +1585,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r4">
+    <div class="elemento Gas-Noble c18 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2956,7 +2956,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r5">
+    <div class="elemento Gas-Noble c18 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6297,7 +6297,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento GasNoble c18 r6">
+    <div class="elemento Gas-Noble c18 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10932,7 +10932,7 @@
         <label class="Metaloide" for="Metaloides">Metaloides</label>
         <label class="Otro-no-Metal" for="Otros-no-Metales">Otros no Metales</label>
         <label class="Halogeno" for="Halogenos">Halogenos</label>
-        <label class="GasNoble" for="Gases-Nobles">Gases Nobles</label>
+        <label class="Gas-Noble" for="Gases-Nobles">Gases Nobles</label>
         
       </div>
     </div>
