--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r1">
+    <div class="elemento gasNoble c18 r1">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -276,7 +276,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r2">
+    <div class="elemento gasNoble c18 r2">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -384,7 +384,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c13 r3">
+    <div class="elemento otroMetal c13 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -589,7 +589,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r3">
+    <div class="elemento gasNoble c18 r3">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1275,7 +1275,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c13 r4">
+    <div class="elemento otroMetal c13 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -1585,7 +1585,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r4">
+    <div class="elemento gasNoble c18 r4">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2541,7 +2541,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c13 r5">
+    <div class="elemento otroMetal c13 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2622,7 +2622,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c14 r5">
+    <div class="elemento otroMetal c14 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -2956,7 +2956,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r5">
+    <div class="elemento gasNoble c18 r5">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5707,7 +5707,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c13 r6">
+    <div class="elemento otroMetal c13 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5823,7 +5823,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c14 r6">
+    <div class="elemento otroMetal c14 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -5940,7 +5940,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c15 r6">
+    <div class="elemento otroMetal c15 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6058,7 +6058,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c16 r6">
+    <div class="elemento otroMetal c16 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -6297,7 +6297,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Gas-Noble c18 r6">
+    <div class="elemento gasNoble c18 r6">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10144,7 +10144,7 @@
         </ul>
       </div>
     </div>
-    <div class="elemento Otro-Metal c14 r7">
+    <div class="elemento otroMetal c14 r7">
       <input class="activate" type="radio" name="elementos"/>
       <input class="deactivate" type="radio" name="elementos"/>
       <div class="overlay"></div>
@@ -10928,11 +10928,11 @@
         <label class="Lantanido" for="Lantanidos">Lantanidos</label>
         <label class="Actinido" for="Actinidos">Actinidos</label>
         <label class="transition-metal" for="Metales-de-Transición">Metales de Transición</label>
-        <label class="Otro-Metal" for="Otros-Metales">Otros Metales</label>
+        <label class="otroMetal" for="Otros-Metales">Otros Metales</label>
         <label class="Metaloide" for="Metaloides">Metaloides</label>
         <label class="Otro-no-Metal" for="Otros-no-Metales">Otros no Metales</label>
         <label class="Halogeno" for="Halogenos">Halogenos</label>
-        <label class="Gas-Noble" for="Gases-Nobles">Gases Nobles</label>
+        <label class="gasNoble" for="Gases-Nobles">Gases Nobles</label>
         
       </div>
     </div>
