--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <input class="category-cancel" type="radio" id="cancel" name="categories"/>
   <input class="category-toggle" type="radio" id="noble-gasses" name="categories"/>
   <input class="category-cancel" type="radio" id="cancel" name="categories"/>
-  <input class="category-toggle" type="radio" id="halogens" name="categories"/>
+  <input class="category-toggle" type="radio" id="unknown" name="categories"/>
   <input class="category-cancel" type="radio" id="cancel" name="categories"/>
   <div class="periodic-table">
     <div class="element other-nonmetal c1 r1">
@@ -9399,7 +9399,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c9 r7">
+    <div class="element unknown c9 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9546,7 +9546,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c10 r7">
+    <div class="element unknown c10 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9694,7 +9694,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c11 r7">
+    <div class="element unknown c11 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9993,7 +9993,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c13 r7">
+    <div class="element unknown c13 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10296,7 +10296,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c15 r7">
+    <div class="element unknown c15 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10449,7 +10449,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c16 r7">
+    <div class="element unknown c16 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10603,7 +10603,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c17 r7">
+    <div class="element unknown c17 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10758,7 +10758,7 @@
         </ul>
       </div>
     </div>
-    <div class="element halogen c18 r7">
+    <div class="element unknown c18 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10931,7 +10931,7 @@
         <label class="other-metal" for="other-metals">Otros Metales</label>
         <label class="metalloid" for="metalloids">Metaloides</label>
         <label class="other-nonmetal" for="other-nonmetals">Otros No Metales</label>
-        <label class="halogen" for="halogens">Halógenos</label>
+        <label class="unknown" for="unknown">Halógenos</label>
         <label class="noble-gas" for="noble-gasses">Gases Nobles</label>
         
       </div>
