--- a/index.html
+++ b/index.html
@@ -10758,7 +10758,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c18 r7">
+    <div class="element noble-gas c18 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10900,7 +10900,7 @@
         <div class="atomic-number">118</div>
         <div class="label">
           <div class="symbol">Og</div>
-          <div class="name">Oganesson</div>
+          <div class="name">Oganesón</div>
         </div>
         <div class="atomic-mass">(294)</div>
         <ul class="atomic-weight">
