--- a/index.html
+++ b/index.html
@@ -9385,7 +9385,7 @@
         <div class="atomic-number">108</div>
         <div class="label">
           <div class="symbol">Hs</div>
-          <div class="name">Hassium</div>
+          <div class="name">Hasio</div>
         </div>
         <div class="atomic-mass">(277)</div>
         <ul class="atomic-weight">
@@ -9399,7 +9399,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c9 r7">
+    <div class="element transition-metal c9 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9532,7 +9532,7 @@
         <div class="atomic-number">109</div>
         <div class="label">
           <div class="symbol">Mt</div>
-          <div class="name">Meitnerium</div>
+          <div class="name">Meitnerio</div>
         </div>
         <div class="atomic-mass">(278)</div>
         <ul class="atomic-weight">
@@ -9546,7 +9546,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c10 r7">
+    <div class="element transition-metal c10 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9680,7 +9680,7 @@
         <div class="atomic-number">110</div>
         <div class="label">
           <div class="symbol">Ds</div>
-          <div class="name">Darmstadtium</div>
+          <div class="name">Darmstatio</div>
         </div>
         <div class="atomic-mass">(281)</div>
         <ul class="atomic-weight">
@@ -9694,7 +9694,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c11 r7">
+    <div class="element transition-metal c11 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -9829,7 +9829,7 @@
         <div class="atomic-number">111</div>
         <div class="label">
           <div class="symbol">Rg</div>
-          <div class="name">Roentgenium</div>
+          <div class="name">Roentgenio</div>
         </div>
         <div class="atomic-mass">(282)</div>
         <ul class="atomic-weight">
@@ -9979,7 +9979,7 @@
         <div class="atomic-number">112</div>
         <div class="label">
           <div class="symbol">Cn</div>
-          <div class="name">Copernicium</div>
+          <div class="name">Copernicio</div>
         </div>
         <div class="atomic-mass">(282)</div>
         <ul class="atomic-weight">
@@ -9993,7 +9993,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c13 r7">
+    <div class="element other-metal c13 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10130,7 +10130,7 @@
         <div class="atomic-number">113</div>
         <div class="label">
           <div class="symbol">Nh</div>
-          <div class="name">Nihonium</div>
+          <div class="name">Nihonio</div>
         </div>
         <div class="atomic-mass">(286)</div>
         <ul class="atomic-weight">
@@ -10282,7 +10282,7 @@
         <div class="atomic-number">114</div>
         <div class="label">
           <div class="symbol">Fl</div>
-          <div class="name">Flerovium</div>
+          <div class="name">Flerovio</div>
         </div>
         <div class="atomic-mass">(289)</div>
         <ul class="atomic-weight">
@@ -10296,7 +10296,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c15 r7">
+    <div class="element other-metal c15 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10435,7 +10435,7 @@
         <div class="atomic-number">115</div>
         <div class="label">
           <div class="symbol">Mc</div>
-          <div class="name">Moscovium</div>
+          <div class="name">Moscovio</div>
         </div>
         <div class="atomic-mass">(290)</div>
         <ul class="atomic-weight">
@@ -10449,7 +10449,7 @@
         </ul>
       </div>
     </div>
-    <div class="element unknown c16 r7">
+    <div class="element other-metal c16 r7">
       <input class="activate" type="radio" name="elements"/>
       <input class="deactivate" type="radio" name="elements"/>
       <div class="overlay"></div>
@@ -10589,7 +10589,7 @@
         <div class="atomic-number">116</div>
         <div class="label">
           <div class="symbol">Lv</div>
-          <div class="name">Livermorium</div>
+          <div class="name">Livermorio</div>
         </div>
         <div class="atomic-mass">(293)</div>
         <ul class="atomic-weight">
@@ -10744,7 +10744,7 @@
         <div class="atomic-number">117</div>
         <div class="label">
           <div class="symbol">Ts</div>
-          <div class="name">Tennessine</div>
+          <div class="name">Teneso</div>
         </div>
         <div class="atomic-mass">(294)</div>
         <ul class="atomic-weight">
